--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.7.2
 Django==4.2.4
+et-xmlfile==1.1.0
 mysqlclient==2.2.0
+numpy==1.26.1
+openpyxl==3.1.2
+pandas==2.1.1
 Pillow==10.0.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
